fixing up some missing lines

--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <script type="text/javascript" src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
   <!---Shim for IE8-->
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <!--script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script-->
 </head>
 <body>
-  <header>
-    <h1>Cutty Bang</h1>
-    <h3>A journey into sound</h3>
-  </header>
   <section class="top-navigation">
     <div class="navbar-wrapper">
       <div class="container">
@@ -74,7 +70,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="" alt="First slide">
+          <img class="first-slide" src="assets/img/mizeroid.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Production</h1>
@@ -89,7 +85,7 @@
             <div class="carousel-caption">
               <h1>Effects</h1>
               <p>Web Audio effects hand crafted to exacting specifications</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">See Effects</a></p>
             </div>
           </div>
         </div>
@@ -99,7 +95,7 @@
             <div class="carousel-caption">
               <h1>Visualizations</h1>
               <p>Audio reactions, osciiloscopes, and 3D visualizations</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse Visuals</a></p>
             </div>
           </div>
         </div>
@@ -114,14 +110,14 @@
       </a>
     </div>
   </section class="top-row">
-
+    <h1 class="top-row-header">Who is Cutty Bang?</h1>
   <section>
   </section>
   <footer>
   </footer>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')</script>
-  <!--script type="text/javascript" src="assets/js/vendor/"></script-->
+  <script type="text/javascript" src="assets/js/vendor/bootstrap.min.js"></script-->
   <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
